[gd_scene load_steps=6 format=3 uid="uid://dga413qveeevc"]

[ext_resource type="Script" uid="uid://bxxteoj6i0bun" path="res://src/systems/character_generator/test/character_portrait_test.gd" id="1_nmdu8"]
[ext_resource type="PackedScene" uid="uid://b58peuo4bsbio" path="res://src/systems/character/character_portrait.tscn" id="2_bd4xp"]
[ext_resource type="PackedScene" uid="uid://6s4mcqvyfcgw" path="res://src/systems/character/passport.tscn" id="3_p6mq6"]

[sub_resource type="InputEventAction" id="InputEventAction_mhq3f"]
action = &"ui_select"

[sub_resource type="Shortcut" id="Shortcut_nmdu8"]
events = [SubResource("InputEventAction_mhq3f")]

[node name="CharacterPortraitTest" type="Node"]
script = ExtResource("1_nmdu8")

[node name="CharacterPortrait" parent="." instance=ExtResource("2_bd4xp")]
position = Vector2(1477, 585)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 114.0
grow_vertical = 2

[node name="Container" type="GridContainer" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Religion"

[node name="ReligionOptions" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Gender"

[node name="GenderOptions" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Hair Color"

[node name="HairColorOptions" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2

[node name="HairColor" type="ColorPickerButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label6" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Skin Color"

[node name="SkinColorOptions" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2

[node name="SkinColor" type="ColorPickerButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label9" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Clothes 1 Color"

[node name="Clothes1Options" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label7" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2

[node name="Clothes1Color" type="ColorPickerButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label10" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2
text = "Clothes 2 Color"

[node name="Clothes2Options" type="OptionButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label8" type="Label" parent="VBoxContainer2/Container"]
layout_mode = 2

[node name="Clothes2Color" type="ColorPickerButton" parent="VBoxContainer2/Container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Generate" type="Button" parent="VBoxContainer2"]
layout_mode = 2
shortcut = SubResource("Shortcut_nmdu8")
text = "Generate!"

[node name="Passport" parent="." instance=ExtResource("3_p6mq6")]
unique_name_in_owner = true
offset_left = 684.0
offset_top = 294.0
offset_right = 756.0
offset_bottom = 371.0

[connection signal="item_selected" from="VBoxContainer2/Container/ReligionOptions" to="." method="_on_religion_options_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/Container/GenderOptions" to="." method="_on_gender_options_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/Container/HairColorOptions" to="." method="_on_hair_color_options_item_selected"]
[connection signal="color_changed" from="VBoxContainer2/Container/HairColor" to="." method="_on_hair_color_color_changed"]
[connection signal="item_selected" from="VBoxContainer2/Container/SkinColorOptions" to="." method="_on_skin_color_options_item_selected"]
[connection signal="color_changed" from="VBoxContainer2/Container/SkinColor" to="." method="_on_skin_color_color_changed"]
[connection signal="item_selected" from="VBoxContainer2/Container/Clothes1Options" to="." method="_on_clothes_1_options_item_selected"]
[connection signal="color_changed" from="VBoxContainer2/Container/Clothes1Color" to="." method="_on_clothes_1_color_color_changed"]
[connection signal="item_selected" from="VBoxContainer2/Container/Clothes2Options" to="." method="_on_clothes_2_options_item_selected"]
[connection signal="color_changed" from="VBoxContainer2/Container/Clothes2Color" to="." method="_on_clothes_2_color_color_changed"]
[connection signal="pressed" from="VBoxContainer2/Generate" to="." method="_on_generate_pressed"]
